fix screenshot sliders z-index

--- a/hearth/media/css/yogafire.styl
+++ b/hearth/media/css/yogafire.styl
@@ -281,7 +281,7 @@ button.ssnav {
     position: absolute;
     top: 40px;
     width: 25px;
-    z-index: 20;
+    z-index: 6;
 
     &:active {
         background: darken($yoga-blue, 10%);
@@ -299,7 +299,7 @@ button.ssnav {
         background: $salt-flat-white;
         width: 60px;
         height: 150px;
-        z-index: 10;
+        z-index: 5;
     }
     &:after {
         top: 15px;
